RESOLVED FIXED285348
Regression(288156@main): http/tests/security/contentSecurityPolicy/connect-src-star-websocket-allowed.html is flakily crashing
https://bugs.webkit.org/show_bug.cgi?id=285348
Summary Regression(288156@main): http/tests/security/contentSecurityPolicy/connect-sr...
Sihui Liu
Reported 2025-01-03 09:53:46 PST
...
Attachments
Radar WebKit Bug Importer
Comment 2 2025-01-03 10:07:42 PST
Sihui Liu
Comment 3 2025-01-03 10:49:16 PST
EWS
Comment 4 2025-01-03 14:17:34 PST
Committed 288420@main (0ee21124e6f2): <https://commits.webkit.org/288420@main> Reviewed commits have been landed. Closing PR #38502 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.