Source/WebKit/NetworkProcess/NetworkSocketChannel.h
@@ -57,7 +57,6 @@ class WebSocketTask;
 class NetworkConnectionToWebProcess;
 class NetworkProcess;
 class NetworkSession;
-struct SharedPreferencesForWebProcess;
 
 class NetworkSocketChannel : public IPC::MessageSender, public IPC::MessageReceiver, public RefCounted<NetworkSocketChannel> {
     WTF_MAKE_TZONE_ALLOCATED(NetworkSocketChannel);
@@ -69,7 +68,6 @@ public:
     void deref() const final { RefCounted::deref(); }
 
     void didReceiveMessage(IPC::Connection&, IPC::Decoder&);
-    std::optional<SharedPreferencesForWebProcess> sharedPreferencesForWebProcess();
 
     friend class WebSocketTask;
 
